--- a/package_manifest.json
+++ b/package_manifest.json
@@ -1,5 +1,5 @@
 {
     "name": "Automation Server Standard LM Test Package",
     "availableInAutSvrStdMode": true,
-    "allowAddingRemoteReposInAutSvrStdMode": false
+    "allowAddingRemoteReposInAutSvrStdMode": true
 }
