--- a/package_manifest.json
+++ b/package_manifest.json
@@ -1,5 +1,7 @@
 {
     "name": "Automation Server Standard LM Test Package",
+    "license": "VELOCITY_OCT_WFA_DM",
     "availableInAutSvrStdMode": true,
     "allowAddingRemoteReposInAutSvrStdMode": true
 }
+
